created components filed, added all required styles and code and implemented react router dom

--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,12 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500&display=swap");
+
 :root {
   --font-base: "Roboto", sans-serif;
-
+  --poppins-font: "Poppins", sans-serif;
   --primary-color: #6422cd;
   --secondary-color: #a382d7;
   --primary-dark-color: #44337a;
-  --background-color: #f9f9f9;
+  --background-color: #f8f6f6;
   --white-color: #ffffff;
   --black-color: #000000;
   --red-color: #f60110;
@@ -17,5 +19,5 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Roboto", sans-serif;
+  font-family: "Poppins", sans-serif;
 }
