added sidebar toggle functionality and tasks scroll functionality

--- a/src/components/NewListButton/NewListButton.css
+++ b/src/components/NewListButton/NewListButton.css
@@ -1,10 +1,10 @@
-.secondaryButtonContainer {
+.newButtonContainer {
   width: 100%;
   padding: 0.8rem 1rem;
-  background: white;
+  background: var(--primary-dark-color);
   border: none;
   border-radius: 10px;
-  color: black;
+  color: white;
   cursor: pointer;
   display: flex;
   align-items: center;
@@ -12,11 +12,6 @@
   gap: 1rem;
   margin-bottom: 1rem;
   transition: 400ms ease-in-out;
-}
-
-.secondaryButtonContainer:hover {
-  background: var(--secondary-color);
-  color: white;
 }
 
 .secondaryButtonContainer > p {
