--- a/src/components/common/Sidebar/Sidebar.css
+++ b/src/components/common/Sidebar/Sidebar.css
@@ -3,6 +3,10 @@
   padding: 1rem;
 }
 
+.sidebarHidden {
+  display: none;
+}
+
 /* @media screen and (max-width: 450px) {
   .sidebarContainer {
     display: none;
