--- a/src/pages/Dashboard.css
+++ b/src/pages/Dashboard.css
@@ -46,7 +46,8 @@
 
 .addTaskCard {
   display: flex;
-  align-items: center;
+  flex-direction: column;
+  align-items: flex-start;
   justify-content: space-between;
   gap: 1rem;
   background: white;
@@ -54,6 +55,39 @@
   border-radius: 15px;
   transition: 400ms ease-in-out;
   letter-spacing: 0.05rem;
+}
+
+.createNewTaskInput {
+  background: var(--background-color);
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0.5rem 1rem;
+  border-radius: 10px;
+  width: 100%;
+  min-height: 40px;
+}
+
+.createNewTaskInput > input {
+  font-family: var(--poppins-font);
+  border: none;
+  background: transparent;
+  outline: none;
+}
+
+/* .createNewTaskInput button {
+  background: var(--primary-color);
+  padding: 10px;
+  border: none;
+  cursor: pointer;
+  padding: 0;
+  display: flex;
+} */
+
+.createNewTaskInput img {
+  height: 15px;
+  width: auto;
 }
 
 .addTaskCard:hover {
